src/objects/pse_Projects__c.object
<CustomObject>
    <description>Projects are used to track ideas generated by the community, through to fruition. 

Each project is assigned a project team and this app is used to define the project, track it&apos;s stage, open issues, and estimated completion date.</description>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <inlineHelpText>Why do this project? 
What happens if we don’t do it? 
Why do it now? 
How critical will the impact of the project be?</inlineHelpText>
        <label>Business Justification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communicated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The status of the project has been communicated back to the community and the project team has debriefed.</inlineHelpText>
        <label>Communicated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Plan__c</fullName>
        <inlineHelpText>How do you plan on communicating the status of this project to the community?</inlineHelpText>
        <label>Communication Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>What department is responsible for this project?</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Employee Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities &amp; Realestate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Sourcing (Purchasing)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <inlineHelpText>Note that changes to the estimated completion date are are tracked in the field history tracking down below, along with the project status, owner, and estimated completion date.</inlineHelpText>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ideas_in_Action_Update__c</fullName>
        <inlineHelpText>Update from the project team on the status of the project.</inlineHelpText>
        <label>Ideas in Action Update</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All the fields in the project object have been filled out and the project is ready to be presented.</inlineHelpText>
        <label>Initial Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <inlineHelpText>What is the level of effort to complete this project? Is it a quick win or a resource intensive project?</inlineHelpText>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestones__c</fullName>
        <inlineHelpText>What are some of the key milestones for this project? 

Milestones can also be cataloged and tracked in the related list below.</inlineHelpText>
        <label>Milestones</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_1__c</fullName>
        <label>Note 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_2__c</fullName>
        <label>Note 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_3__c</fullName>
        <label>Note 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>Score1__c + Score2__c + Score3__c + Score4__c + Score5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Provide a short description of the project to define the goals, what is in scope, and what is out of scope.</inlineHelpText>
        <label>Project Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Priority__c</fullName>
        <inlineHelpText>How high of a priority is it for the organization and the group?</inlineHelpText>
        <label>Project Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Under Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coming Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resourced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The project has been presented and resources have been approved.</inlineHelpText>
        <label>Resourced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <formula>if ( Initial_Plan__c ,20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score2__c</fullName>
        <formula>if(Resourced__c ,20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score3__c</fullName>
        <formula>if( Plan_Defined__c ,20,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>IMAGE( CASE(  Project_Stage__c  , 
&quot;Under Consideration&quot;, 
&quot;/servlet/servlet.FileDownload?file=01550000002KG8V&quot;, 
&quot;Coming Soon&quot;, 
&quot;/servlet/servlet.FileDownload?file=01550000002KG8W&quot;, 
&quot;In Progress&quot;,
&quot;/servlet/servlet.FileDownload?file=01550000002KG8X&quot;,
&quot;Archived&quot;, 
&quot;/servlet/servlet.FileDownload?file=01550000002KG8Y&quot;, 
&quot;Delivered&quot;, 
&quot;/servlet/servlet.FileDownload?file=01550000002KG8Z&quot;, &quot;/s.gif&quot;), &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IMAGE( CASE(  Project_Status__c ,  &quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, &quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, &quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot;), &quot;status flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Factors__c</fullName>
        <inlineHelpText>Briefly describe any issues that will need to be addressed prior to or during the project. Are there any risks, dependencies, or constraints to be aware of? 

Project Issues can also be cataloged and tracked in the related list below.</inlineHelpText>
        <label>Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Project__c</fullName>
        <label>Type of Project</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse_Original_Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Idea</label>
        <referenceTo>pse_Idea__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllProjects</fullName>
        <columns>NAME</columns>
        <columns>Project_Stage__c</columns>
        <columns>Stage__c</columns>
        <columns>Department__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>ComingSoon</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Coming Soon</value>
        </filters>
        <label>Coming Soon</label>
    </listViews>
    <listViews>
        <fullName>Delivered</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <label>Delivered</label>
    </listViews>
    <listViews>
        <fullName>UnderConsideration</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Under Consideration</value>
        </filters>
        <label>Under Consideration</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>